<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:StudIPApplication="http://schemas.android.com/apk/res-auto">


<item
        android:id="@+id/delete_message"
        android:icon="@drawable/ic_action_trash"
        StudIPApplication:showAsAction="ifRoom|withText"
        android:title="@string/delete_message"
        android:titleCondensed="@string/delete"/>

    <item
        android:id="@+id/reply_message"
        android:icon="@drawable/ic_action_reply"
        StudIPApplication:showAsAction="ifRoom|withText"
        android:title="@string/reply_message"
        android:titleCondensed="@string/reply"/>

    <item
        android:id="@+id/forward_message"
        android:icon="@drawable/ic_action_forward"
        StudIPApplication:showAsAction="ifRoom|withText"
        android:title="@string/forward_message"
        android:titleCondensed="@string/forward"/>


</menu>