<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/planner_list"
        android:title="@string/list_view"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/planner_day"
            android:title="@string/day_view"/>

        <item
            android:id="@+id/planner_three_days"
            android:title="@string/three_day_view"/>

        <item
            android:id="@+id/planner_week"
            android:title="@string/week_view"/>
    </group>
</menu>