<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/News"/>

        <item
            android:id="@+id/navigation_courses"
            android:icon="@drawable/ic_menu_courses"
            android:title="@string/Courses"/>

        <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/Messages"/>

        <item
            android:id="@+id/navigation_contacts"
            android:icon="@drawable/ic_menu_community"
            android:title="@string/Contacts"/>

        <item
            android:id="@+id/navigation_planner"
            android:icon="@drawable/ic_menu_planner"
            android:title="@string/Planner"/>

        <item
            android:id="@+id/navigation_timetable"
            android:icon="@drawable/ic_menu_planner"
            android:title="Timetable"/>
    </group>
</menu>