<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_feedback"
        android:showAsAction="never"
        android:title="@string/Feedback"
        android:titleCondensed="@string/Feedback"/>

    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/about_studip_mobile"
        android:titleCondensed="@string/About"/>

    <item
        android:id="@+id/search_studip"
        android:title="@string/search_studip"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"/>
</menu>