<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2014 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sign_in_imageview"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/studip_mobile_dark"
            android:contentDescription="@string/studip_logo"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:src="@drawable/logo_studip"/>

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/studip_mobile_dark"
            android:gravity="center"
            android:paddingBottom="@dimen/layout_margin_normal"
            android:paddingLeft="@dimen/layout_margin_normal"
            android:textColor="@color/primary_text_dark"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="sans-serif-thin"/>

        <TextView
            android:id="@+id/homepage_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/studip_mobile_dark"
            android:gravity="center"
            android:linksClickable="true"
            android:paddingBottom="@dimen/layout_margin_normal"
            android:paddingLeft="@dimen/layout_margin_normal"
            android:text="@string/homepage_text"
            android:textColor="@color/primary_text_dark"
            android:textColorLink="@color/sutdip_mobile_light"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="sans-serif-thin"/>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_normal"
            android:text="@string/about_text"
            android:textColor="@color/primary_text_light"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_normal"
            android:text="@string/faq"
            android:textColor="@color/sutdip_mobile_light"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_normal"
            android:text="@string/privacy_policy"
            android:textColor="@color/sutdip_mobile_light"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/licenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_normal"
            android:text="@string/licenses"
            android:textColor="@color/sutdip_mobile_light"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/legal_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_normal"
            android:text="@string/legal_notice"
            android:textColor="@color/sutdip_mobile_light"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>