<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2014 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/studip_mobile_dark"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/sign_in_imageview"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/studip_logo"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:src="@drawable/logo_studip"/>

    <LinearLayout
        android:id="@+id/sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/list_item_selector"/>


        <TextView
            android:id="@id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:drawableLeft="@drawable/ic_info_blue"
            android:gravity="fill_vertical"
            android:text="@string/no_servers"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:drawableLeft="@drawable/ic_key_blue"
            android:drawablePadding="-48dp"
            android:gravity="center"
            android:text="@string/Authorize"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_info"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/sign_in_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            />

        <TextView
            android:id="@+id/sync_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_normal"
            android:text="@string/authentication"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/text_size_medium"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#40000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding_normal"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_info_circle"
            />

        <TextView
            android:id="@+id/info_box_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/missing_studip_message"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/text_size_micro"/>
    </LinearLayout>

</LinearLayout>